--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,15 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=YoungProf
 
-# Recreate or updte the database after stopping and starting ??? =>
+# Recreate or update the database after stopping and starting ??? =>
 ## options for spring.jpa.hibernate.ddl-auto: none, validate, update, create, create-drop
 spring.jpa.hibernate.ddl-auto=update
 
 # log sql queries to console or not
 spring.jpa.show-sql=true
+
+jwt.header=Authorization
+jwt.secret=mySecret
+jwt.expiration=604800
+jwt.route.authentication.path=auth
+jwt.route.authentication.refresh=refresh
