--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,12 +3,14 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=YoungProf
 
+spring.main.allow-circular-references = true
 # Recreate or update the database after stopping and starting ??? =>
 ## options for spring.jpa.hibernate.ddl-auto: none, validate, update, create, create-drop
 spring.jpa.hibernate.ddl-auto=update
 
 # log sql queries to console or not
 spring.jpa.show-sql=true
+
 
 jwt.header=Authorization
 jwt.secret=mySecret
